--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@ body,
   margin: 5px;
 }
 
+.configuration-section {
+  padding-left: 5px;
+  margin-left: 5px;
+  border-left: 1px solid grey;
+}
+
 .configuration-title {
   font-size: large;
   font-weight: 600;
@@ -41,9 +47,9 @@ body,
   margin-left: 2px;
 }
 
-.runner-input-speed {
+.runner-input-number {
   text-align: end;
-  width: 50px;
+  width: 40px;
   margin-left: 2px;
 }
 
